Added resume download button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
                 <img src="profile.jpg" alt="Imran Khalid" class="profile-img">
                 <h1>Imran Khalid</h1>
                 <p class="tagline">Customer Experience Professional | Crisis Management Specialist</p>
+                <div class="cta-buttons">
+                    <a href="resume.pdf" download class="download-btn">
+                        <i class="fas fa-download"></i> Download Resume
+                    </a>
+                </div>
             </div>
             <nav>
                 <a href="#about">About</a>
